# AetherOS

./: .gitignore  ARCHITECTURE.md  BUILD.md  Cargo.toml  LICENSE  README.md  x86_64-unknown-none.json
AetherOS-Rule/: directory_structure.md  rule.md  specifications.md  technical_requirements.md
kernel/: main.rs
kernel/arch/: mod.rs
kernel/arch/aarch64/: mod.rs
kernel/arch/aarch64/cpu/: mod.rs  modern_cores.rs
kernel/arch/aarch64/interrupts/: gic.rs  mod.rs
kernel/arch/aarch64/mm/: memory_types.rs  mod.rs  page_table.rs
kernel/arch/riscv64/: mod.rs
kernel/arch/riscv64/boot/: boot.rs  mod.rs
kernel/arch/riscv64/cpu/: extensions.rs  mod.rs
kernel/arch/riscv64/interrupts/: mod.rs
kernel/arch/riscv64/mm/: memory_types.rs  mod.rs  page_table.rs  sv39.rs  sv48.rs  sv57.rs
kernel/arch/x86_64/: gdt.rs  idt.rs  interrupt_table.rs  mod.rs  timer.rs  tss.rs
kernel/arch/x86_64/boot/: entry.asm  mod.rs  multiboot2.rs  uefi.rs
kernel/arch/x86_64/cpu/: advanced_extensions.rs  init.rs  io.rs  mod.rs
kernel/arch/x86_64/interrupts/: apic.rs  handlers.rs  mod.rs  pic.rs
kernel/arch/x86_64/mm/: gdt.rs  mod.rs  page_table.rs  paging.rs
kernel/bootloader/: README.md  aarch64.rs  boot_info.rs  fast_boot.rs  graphics.rs  hardware_detection.rs  legacy_boot.rs  memory_map.rs  mod.rs  secure_boot.rs  uefi_boot.rs
kernel/core/: dynamic_update.rs  dynamic_update_helpers.rs  hybrid_kernel.rs  kernel.rs  mod.rs  multi_kernel.rs
kernel/core/distributed/: mod.rs
kernel/core/fs/: README.md  cache.rs  journal.rs  mod.rs  transaction.rs  universal_fs.rs  vfs.rs
kernel/core/fs/exfat/: allocator.rs  cache.rs  mod.rs  superblock.rs
kernel/core/graphics/: mod.rs
kernel/core/memory/: README.md  adaptive_allocator.rs  adaptive_memory.rs  allocator.rs  buddy.rs  cache.rs  cross_tier_optimization.rs  cxl.rs  hbm.rs  hbm_bench.rs  hbm_enhanced.rs  hierarchical_cache.rs  locality.rs  mod.rs  numa.rs  pmem.rs  predictor.rs  probabilistic_cache.rs  quantum_memory.rs  reverse_map.rs  safety.rs  self_healing.rs  slab.rs  slub.rs  spacetime_compression.rs  zerocopy.rs
kernel/core/network/: accelerated.rs  crypto.rs  device.rs  mod.rs  netdev.rs  protocol.rs  quantum.rs  queue.rs  stats.rs  tcp.rs  telepage.rs  transport.rs  zerocopy.rs
kernel/core/process/: affinity.rs  isolation.rs  mod.rs  scheduler.rs  scheduler_extension.rs  thread.rs
kernel/core/security/: access_control.rs  audit.rs  crypto.rs  crypto_manager.rs  integrity.rs  mod.rs  security_manager.rs  threat_detection.rs  zero_trust.rs
kernel/core/sync/: barrier.rs  lockfree.rs  mod.rs  mutex.rs  rwlock.rs  semaphore.rs  spinlock.rs
kernel/drivers/: mod.rs  serial.rs
kernel/drivers/block/: nvme.rs
kernel/drivers/pci/: address.rs  config.rs  config_access.rs  config_access_util.rs  device.rs  device_trait.rs  ecam.rs  enumerate.rs  firmware.rs  hotplug.rs  mod.rs  pci.rs  port_io.rs
kernel/drivers/usb/: device.rs  hci.rs  mod.rs  xhci.rs
kernel/scheduler/: adaptive.rs  cfs.rs  mod.rs
kernel/tests/compatibility/: version_tests.rs
kernel/tests/mm/: buddy_tests.rs  slub_test.rs  telepage_test.rs
kernel/tests/process/: isolation_tests.rs  scheduler_extension_tests.rs
kernel/tests/sync/: barrier_tests.rs  lockfree_tests.rs
kernel/time/: mod.rs
kernel/universal_compatibility/: README.md  binary_cache.rs  binary_format_detector.rs  binary_translator.rs  jit_compiler.rs  mod.rs  package_handler.rs  parallel_translator.rs  version_manager.rs
(+89 files in other folders)
